--- a/index.html
+++ b/index.html
@@ -10,46 +10,64 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
 
+	<!-- Leaflet CSS -->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+	 crossorigin="" />
+
+	<style>
+		#mapid { height: 50vh; }
+
+		.scrollspy-example {
+			height: 500px;
+			overflow: auto;
+		}
+   </style>
+
 	<title>Hello, world!</title>
 </head>
 
 <body>
 	<nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark fixed-top">
-		<a class="navbar-brand" href="#">Jaydeep Mistry</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-		 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Education</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Skills</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Experience</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Profile</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Portfolio</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact</a>
-				</li>
-			</ul>
+		<div class="container">
+			<a class="navbar-brand ml-2" href="#">Jaydeep Mistry</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Education</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Experience</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Profile</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Portfolio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+				</ul>
+			</div>
 		</div>
+
+
 	</nav>
 
 	<div class="container">
-		<div class="jumbotron jumbotron-fluid rounded border mt-4">
+		<div class="jumbotron jumbotron-fluid rounded border mt-3 mb-3">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm">
@@ -58,13 +76,13 @@
 						<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 					</div>
 					<div class="col-sm">
-						<img class="rounded float-right img-thumbnail" alt="..." src="https://lh3.googleusercontent.com/-jteC_ItjV6pPclgSa8YxlGMWsDNX8UgCcWx5zRFL87MnJUDrwGqxIasTCvH2wBuFNDoul_GlYRNL2Ge-uFAGPeZfwOV1KxhyEnUh6kHEUmQOAJDKlNVDyZtnIKcYnF60lYYWuhZqIIW9ZE82VfDv1vLnShN856k5ZA-_MQrJIXKzn2OkBtbBZXf8AdGDBA-dRYyzS9gkw1OWc1AWHYE88hM6tfyoUtzy9htyTATYambbk3KqSEICoQ07oNnUpijsBdzxkXFqORtaLWMkuWh1jji3sI0UwkEKFeMh0rx7VC2f321bOqSbFmGf9yRUlqa98TT849SCBMWO8SKi6_J78a90oBpMDB3W0viAzWOOWfd9yKzk68XDIVReRkFddHBi6PuleR6M6abZmVY-bQy48V3ZNL5xwH9oApOM6n2j--hrbNz9LU6pzzLga548O-Zq00CTopq_Hx-qbwJd-THhFXbgQtH53udwNM3mRIYS3_3T8HSJ-KlQ5kJJ7484Dw7qoxFwkpN5pafEGrNJnQUd0oZVQfpiKOY5ECU1VYct_NFn2SdTumO_yDC5I88y_N7ULVd-9nL_euVv_FVuyfAiezIHQg5f-X9wF9uMJJi4z-IsetBrw6x65xZL6eJWK8R=w1570-h883-no">
+						<img class="img-thumbnail" alt="..." src="https://lh3.googleusercontent.com/-jteC_ItjV6pPclgSa8YxlGMWsDNX8UgCcWx5zRFL87MnJUDrwGqxIasTCvH2wBuFNDoul_GlYRNL2Ge-uFAGPeZfwOV1KxhyEnUh6kHEUmQOAJDKlNVDyZtnIKcYnF60lYYWuhZqIIW9ZE82VfDv1vLnShN856k5ZA-_MQrJIXKzn2OkBtbBZXf8AdGDBA-dRYyzS9gkw1OWc1AWHYE88hM6tfyoUtzy9htyTATYambbk3KqSEICoQ07oNnUpijsBdzxkXFqORtaLWMkuWh1jji3sI0UwkEKFeMh0rx7VC2f321bOqSbFmGf9yRUlqa98TT849SCBMWO8SKi6_J78a90oBpMDB3W0viAzWOOWfd9yKzk68XDIVReRkFddHBi6PuleR6M6abZmVY-bQy48V3ZNL5xwH9oApOM6n2j--hrbNz9LU6pzzLga548O-Zq00CTopq_Hx-qbwJd-THhFXbgQtH53udwNM3mRIYS3_3T8HSJ-KlQ5kJJ7484Dw7qoxFwkpN5pafEGrNJnQUd0oZVQfpiKOY5ECU1VYct_NFn2SdTumO_yDC5I88y_N7ULVd-9nL_euVv_FVuyfAiezIHQg5f-X9wF9uMJJi4z-IsetBrw6x65xZL6eJWK8R=w1570-h883-no">
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="jumbotron jumbotron-fluid rounded border mt-4">
+		<div class="jumbotron jumbotron-fluid rounded border mt-3 mb-3">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm">
@@ -73,9 +91,50 @@
 						<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 					</div>
 					<div class="col-sm">
-						<img class="rounded float-right img-thumbnail" alt="..." src="https://lh3.googleusercontent.com/-jteC_ItjV6pPclgSa8YxlGMWsDNX8UgCcWx5zRFL87MnJUDrwGqxIasTCvH2wBuFNDoul_GlYRNL2Ge-uFAGPeZfwOV1KxhyEnUh6kHEUmQOAJDKlNVDyZtnIKcYnF60lYYWuhZqIIW9ZE82VfDv1vLnShN856k5ZA-_MQrJIXKzn2OkBtbBZXf8AdGDBA-dRYyzS9gkw1OWc1AWHYE88hM6tfyoUtzy9htyTATYambbk3KqSEICoQ07oNnUpijsBdzxkXFqORtaLWMkuWh1jji3sI0UwkEKFeMh0rx7VC2f321bOqSbFmGf9yRUlqa98TT849SCBMWO8SKi6_J78a90oBpMDB3W0viAzWOOWfd9yKzk68XDIVReRkFddHBi6PuleR6M6abZmVY-bQy48V3ZNL5xwH9oApOM6n2j--hrbNz9LU6pzzLga548O-Zq00CTopq_Hx-qbwJd-THhFXbgQtH53udwNM3mRIYS3_3T8HSJ-KlQ5kJJ7484Dw7qoxFwkpN5pafEGrNJnQUd0oZVQfpiKOY5ECU1VYct_NFn2SdTumO_yDC5I88y_N7ULVd-9nL_euVv_FVuyfAiezIHQg5f-X9wF9uMJJi4z-IsetBrw6x65xZL6eJWK8R=w1570-h883-no">
+						<div class="img-thumbnail">
+							<div id="mapid" class="img-thumbnail"></div>
+						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="jumbotron jumbotron-fluid rounded border mt-3 mb-3">
+			<div class="container">
+					<div class="row">
+							<div class="col-4">
+							  <div id="list-example" class="list-group">
+								<a class="list-group-item list-group-item-action active" href="#list-item-1">Item 1</a>
+								<a class="list-group-item list-group-item-action" href="#list-item-2">Item 2</a>
+								<a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
+								<a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
+							  </div>
+							</div>
+							<div class="col-8">
+							  <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
+								<h4 id="list-item-1">Item 1</h4>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<h4 id="list-item-2">Item 2</h4>
+								<p>Quis magna Lorem anim amet ipsum do mollit sit cillum voluptate ex nulla tempor. Laborum consequat non elit enim exercitation cillum aliqua consequat id aliqua. Esse ex consectetur mollit voluptate est in duis laboris ad sit ipsum anim Lorem. Incididunt veniam velit elit elit veniam Lorem aliqua quis ullamco deserunt sit enim elit aliqua esse irure. Laborum nisi sit est tempor laborum mollit labore officia laborum excepteur commodo non commodo dolor excepteur commodo. Ipsum fugiat ex est consectetur ipsum commodo tempor sunt in proident.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<h4 id="list-item-3">Item 3</h4>
+								<p>Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco est ex ullamco excepteur.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>								
+								<h4 id="list-item-4">Item 4</h4>
+								<p>Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco est ex ullamco excepteur.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+								<p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
+							  </div>
+							</div>
+						  </div>
 			</div>
 		</div>
 	</div>
@@ -88,6 +147,19 @@
 	 crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	 crossorigin="anonymous"></script>
+
+	<!-- Leaflet JS -->
+	<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+	 crossorigin=""></script>
+
+	<script>
+		var mymap = L.map('mapid').setView([43.470837, -80.538000], 14);
+
+		L.tileLayer("http://tile.openstreetmap.org/{z}/{x}/{y}.png", {
+			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, '
+		}).addTo(mymap);
+
+	</script>
 </body>
 
 </html>
