--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	 crossorigin="" />
 
 	<style>
-		#mapid { height: 50vh; }
+		.map-frame {
+			 height: 50vh; 
+		}
 
 		.scrollspy-example {
 			height: 40vh;
@@ -40,13 +42,13 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Bio</a>
+						<a class="nav-link" href="#about">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Skills</a>
+						<a class="nav-link" href="#skills">Skills</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Education</a>
+						<a class="nav-link" href="#education">Education</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Experiences</a>
@@ -58,8 +60,92 @@
 		</div>
 	</nav>
 
-	<div class="container">
-		
+	<div class="container mt-3">
+
+		<div id="about" class="card mb-3">
+			<div class="card-body">
+				<h5 class="card-title">About Me</h5>
+				<div class="row">
+					<div class="col-lg">
+						<img class="img-thumbnail" alt="..." src="https://lh3.googleusercontent.com/-jteC_ItjV6pPclgSa8YxlGMWsDNX8UgCcWx5zRFL87MnJUDrwGqxIasTCvH2wBuFNDoul_GlYRNL2Ge-uFAGPeZfwOV1KxhyEnUh6kHEUmQOAJDKlNVDyZtnIKcYnF60lYYWuhZqIIW9ZE82VfDv1vLnShN856k5ZA-_MQrJIXKzn2OkBtbBZXf8AdGDBA-dRYyzS9gkw1OWc1AWHYE88hM6tfyoUtzy9htyTATYambbk3KqSEICoQ07oNnUpijsBdzxkXFqORtaLWMkuWh1jji3sI0UwkEKFeMh0rx7VC2f321bOqSbFmGf9yRUlqa98TT849SCBMWO8SKi6_J78a90oBpMDB3W0viAzWOOWfd9yKzk68XDIVReRkFddHBi6PuleR6M6abZmVY-bQy48V3ZNL5xwH9oApOM6n2j--hrbNz9LU6pzzLga548O-Zq00CTopq_Hx-qbwJd-THhFXbgQtH53udwNM3mRIYS3_3T8HSJ-KlQ5kJJ7484Dw7qoxFwkpN5pafEGrNJnQUd0oZVQfpiKOY5ECU1VYct_NFn2SdTumO_yDC5I88y_N7ULVd-9nL_euVv_FVuyfAiezIHQg5f-X9wF9uMJJi4z-IsetBrw6x65xZL6eJWK8R=w1570-h883-no">
+					</div>
+					<div class="col-sm">
+						Learn why he is the best person to hire for your next data-science or GIS project.
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div id="skills" class="card mb-3">
+			<div class="card-body">
+				<h5 class="card-title">Skills</h5>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">
+						<div class="row">
+							<div class="col-sm">
+								Python
+							</div>
+							<div class="col-sm">
+								<div class="progress h-100">
+									<div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
+									 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="list-group-item">
+						GIS (Geographic Information Science)
+					</li>
+					<li class="list-group-item">
+						ArcGIS Pro & Onine
+					</li>
+					<li class="list-group-item">
+						Front-End Development
+					</li>
+					<li class="list-group-item">
+						Ionic Framework
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<div id="education" class="card mb-3">
+			<div class="card-body">
+				<h5 class="card-title">Education</h5>
+				<div class="row">
+					<div class="col-lg">
+						<div class="img-thumbnail">
+							<div id="mapid" class="img-thumbnail map-frame"></div>
+						</div>
+					</div>
+					<div class="col-sm">
+						<div class="row-sm">
+							<h5>
+								Master of Environmental studies
+							</h5>
+						</div>
+						<div class="row-sm">
+							<p>
+								Swagger
+							</p>
+						</div>
+						<div class="row-sm">
+							<h5>
+								Bachelors of Environmental Studies
+							</h5>
+						</div>
+						<div class="row-sm">
+							<p>
+								Swagger2
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
 
 
 
@@ -230,6 +316,12 @@
 		L.tileLayer("http://tile.openstreetmap.org/{z}/{x}/{y}.png", {
 			attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, '
 		}).addTo(mymap);
+
+		// var mymap2 = L.map('mapid2').setView([43.470837, -80.538000], 14);
+
+		// L.tileLayer("http://tile.openstreetmap.org/{z}/{x}/{y}.png", {
+		// 	attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, '
+		// }).addTo(mymap2);
 
 	</script>
 </body>
