--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Bootstrap Example</title>
+	<title>Jaydeep Mistry</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,6 +22,14 @@
 	
 		.site-header {
 			background-color: rgba(0, 0, 0, .85) !important;
+		}
+
+		.pt-7  {
+			padding-top: 70px;
+		}
+
+		.pb-7 {
+			padding-bottom: 70px;
 		}
 	
 		.progress-skills {
@@ -63,7 +71,7 @@
 			<a class="navbar-brand ml-2" href="#">Jaydeep Mistry</a>
 
 			<div id="navbarSupportedContent" class="collapse navbar-collapse">
-				<ul class="navbar-nav ml-auto nav-pills">
+				<ul class="navbar-nav ml-auto nav-pills pt-1">
 					<li class="nav-item">
 						<a class="nav-link pl-2 pr-2" href="#about">About</a>
 					</li>
@@ -85,21 +93,20 @@
 	</nav>
 
 	<div class="container">
-
-		<div id="about" class="container-fluid bg-success pb-3" style="padding-top:70px;">
+		<div id="about" class="pt-7">
 			<h1 class="display-4">About</h1>
 			<div class="card">
 				<div class="card-body">
 					<div class="row">
 						<div class="col-lg">
-							<img class="img-thumbnail" alt="Jaydeep Mistry Profile Picture" src="https://lh3.googleusercontent.com/-jteC_ItjV6pPclgSa8YxlGMWsDNX8UgCcWx5zRFL87MnJUDrwGqxIasTCvH2wBuFNDoul_GlYRNL2Ge-uFAGPeZfwOV1KxhyEnUh6kHEUmQOAJDKlNVDyZtnIKcYnF60lYYWuhZqIIW9ZE82VfDv1vLnShN856k5ZA-_MQrJIXKzn2OkBtbBZXf8AdGDBA-dRYyzS9gkw1OWc1AWHYE88hM6tfyoUtzy9htyTATYambbk3KqSEICoQ07oNnUpijsBdzxkXFqORtaLWMkuWh1jji3sI0UwkEKFeMh0rx7VC2f321bOqSbFmGf9yRUlqa98TT849SCBMWO8SKi6_J78a90oBpMDB3W0viAzWOOWfd9yKzk68XDIVReRkFddHBi6PuleR6M6abZmVY-bQy48V3ZNL5xwH9oApOM6n2j--hrbNz9LU6pzzLga548O-Zq00CTopq_Hx-qbwJd-THhFXbgQtH53udwNM3mRIYS3_3T8HSJ-KlQ5kJJ7484Dw7qoxFwkpN5pafEGrNJnQUd0oZVQfpiKOY5ECU1VYct_NFn2SdTumO_yDC5I88y_N7ULVd-9nL_euVv_FVuyfAiezIHQg5f-X9wF9uMJJi4z-IsetBrw6x65xZL6eJWK8R=w1570-h883-no">
+							<img class="img-thumbnail" alt="Jaydeep Mistry Profile Picture" src="https://i.ibb.co/HqrqqYc/Mistry-Jaydeep-San-Diego.jpg">
 							<p class="container text-right">
 								<i class="fas fa-map-marker-alt"></i>
 								La Hoya, San Diego, U.S.A.
 							</p>
 						</div>
 						<div class="col-sm lead text-center">
-							<p class="lead">
+							<p class="lead mb-0">
 								Jaydeep Mistry is an persistent programmer, a dedicated friend, and a relentless problem solver. He has
 								competed
 								in
@@ -112,15 +119,15 @@
 			</div>
 
 		</div>
-		<div id="skills" class="container-fluid bg-warning pb-3" style="padding-top:70px;">
+		<div id="skills" class="pt-7">
 			<h1 class="display-4">Skills</h1>
 			<div class="card">
 				<ul class="list-group list-group-flush">
 					<li class="list-group-item">
 						<div class="row">
 							<div class="col-sm">
-								<div class="progress progress-skills mb-2">
-									<div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
+								<div class="border border-secondary progress progress-skills mb-2">
+									<div class="progress-bar bg-success" role="progressbar"
 									 aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"><strong>95%</strong></div>
 								</div>
 							</div>
@@ -139,8 +146,8 @@
 					<li class="list-group-item">
 						<div class="row">
 							<div class="col-sm">
-								<div class="progress progress-skills mb-2">
-									<div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
+								<div class="border border-secondary progress progress-skills mb-2">
+									<div class="progress-bar bg-success" role="progressbar"
 									 aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"><strong>90%</strong></div>
 								</div>
 							</div>
@@ -158,8 +165,8 @@
 					<li class="list-group-item">
 						<div class="row">
 							<div class="col-sm">
-								<div class="progress progress-skills mb-2">
-									<div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
+								<div class="border border-secondary progress progress-skills mb-2">
+									<div class="progress-bar bg-success" role="progressbar"
 									 aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><strong>80%</strong></div>
 								</div>
 							</div>
@@ -176,8 +183,8 @@
 					<li class="list-group-item">
 						<div class="row">
 							<div class="col-sm">
-								<div class="progress progress-skills mb-2">
-									<div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
+								<div class="border border-secondary progress progress-skills mb-2">
+									<div class="progress-bar bg-success" role="progressbar"
 									 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"><strong>75%</strong></div>
 								</div>
 							</div>
@@ -196,7 +203,7 @@
 			</div>
 		</div>
 
-		<div id="education" class="container-fluid bg-info pb-3" style="padding-top:70px;">
+		<div id="education" class="pt-7">
 			<h1 class="display-4">Education</h1>
 			<div class="card">
 				<div class="card-body">
@@ -246,7 +253,7 @@
 
 		</div>
 
-		<div id="experiences" class="container-fluid bg-danger pb-3" style="padding-top:70px;">
+		<div id="experiences" class="pt-7">
 			<h1 class="display-4">Experiences</h1>
 
 			<div class="card">
@@ -490,7 +497,7 @@
 									</div>
 									<ul class="list-group list-group-flush">
 										<li class="list-group-item text-right">
-											<a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.grttxt.jrmistry.grtext2" role="button">
+											<a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.grttxt.jrmistry.grtext2" role="button" target="_blank">
 												Available on Google Play
 											</a>
 										</li>
@@ -532,7 +539,7 @@
 									</div>
 									<ul class="list-group list-group-flush">
 										<li class="list-group-item text-right">
-											<a class="btn btn-primary" href="https://esricanada-ce.github.io/appchallenge/2018/teams/uw/Water3D/" role="button">
+											<a class="btn btn-primary" href="https://esricanada-ce.github.io/appchallenge/2018/teams/uw/Water3D/" role="button" target="_blank">
 												Available here
 											</a>
 										</li>
@@ -557,7 +564,7 @@
 									</div>
 									<ul class="list-group list-group-flush">
 										<li class="list-group-item text-right">
-											<a class="btn btn-primary" href="https://esricanada-ce.github.io/appchallenge/2017/teams/uw/Team_Earth_Link/" role="button">
+											<a class="btn btn-primary" href="https://esricanada-ce.github.io/appchallenge/2017/teams/uw/Team_Earth_Link/" role="button" target="_blank">
 												Available here
 											</a>
 										</li>
@@ -590,7 +597,7 @@
 			</div>
 		</div>
 
-		<div id="contact" class="container-fluid bg-secondary pb-3" style="padding-top:70px;padding-bottom:70px">
+		<div id="contact" class="pt-7 pb-7">
 			<h1 class="display-4">Contact</h1>
 			<p>
 				There are many ways to reach me! Best would be email.
@@ -598,11 +605,12 @@
 			<div class="card">
 				<div class="card-body">
 					<div class="row text-center">
-						<div class="col pb-3">
+						<div class="col mb-4">
 							<!-- Button trigger modal -->
-							<button type="button" class="btn btn-link p-0" data-toggle="modal" data-target="#exampleModal">
-								<i class="pl-1 fas fa-envelope fa-3x"></i>
-								</br>
+							<button type="button" class="btn btn-primary text-center" data-toggle="modal" data-target="#exampleModal">
+								<div>
+									<i class="fas fa-envelope fa-3x"></i>
+								</div>								
 								Email
 							</button>
 							
@@ -625,72 +633,99 @@
 											<p>
 												If the run rises in the East, and sets in West, and the moon can be seen during daytime and night time in the sky, what covers over 70% of the Earth, can be seen from space, and looks mostly blue if the sun is constantly shining down on it?
 											</p>
-											<form>
+											<form class="needs-validation" novalidate>
 												<div class="form-group">
-													<input id="emailRequest" class="form-control text-center" type="text" placeholder="WaterWaterWater">
+													<input id="emailRequest" class="form-control text-center" type="text" placeholder="WaterWaterWater" required>
+													<div class="invalid-feedback">
+														Incorrect answer.
+													</div>
+													<button type="submit" onclick="validateEmailRequest()" class="btn btn-primary mt-3">Submit</button>
 												</div>
-												<div class="form-group">
-													<button type="submit" onclick="validateEmailRequest()" class="btn btn-primary">Submit</button>
-												</div>
-												<div class="form-group">
-													<a id="emailAnswer" class="lead" href="mailto:#"></a>
-												</div>																								
-											</form>											
+											</form>
+											<a id="emailAnswer" class="lead" href="mailto:#"></a>
+											
+											<script>
+													// Example starter JavaScript for disabling form submissions if there are invalid fields
+													(function() {
+													  'use strict';
+													  window.addEventListener('load', function() {
+														// Fetch all the forms we want to apply custom Bootstrap validation styles to
+														var forms = document.getElementsByClassName('needs-validation');
+														// Loop over them and prevent submission
+														var validation = Array.prototype.filter.call(forms, function(form) {
+														  form.addEventListener('submit', function(event) {
+															if (form.checkValidity() === false) {
+															  event.preventDefault();
+															  event.stopPropagation();
+															}
+															form.classList.add('was-validated');
+														  }, false);
+														});
+													  }, false);
+													})();
+													</script>
 										</div>
 									</div>
 								</div>
-							</div>
+							</div>	
 						</div>
-						<div class="col pb-3">
-							<a href="https://twitter.com/Jaydeep__Mistry" target="_blank">
-								<i class="pl-1 fab fa-twitter-square fa-3x"></i>
-								</br>
+						<div class="col mb-4">
+							<a class='btn btn-primary text-center' href="https://twitter.com/Jaydeep__Mistry" target="_blank">
+								<div>
+									<i class="fab fa-twitter-square fa-3x"></i>
+								</div>
 								Twitter
 							</a>
 						</div>
-						<div class="col pb-3">
-							<a href="https://www.linkedin.com/in/jaydeep-mistry/" target="_blank">
-								<i class="pl-1 fab fa-linkedin fa-3x"></i>
-								</br>
+						<div class="col mb-4">
+							<a class='btn btn-primary text-center' href="https://www.linkedin.com/in/jaydeep-mistry/" target="_blank">
+								<div>
+									<i class="fab fa-linkedin fa-3x"></i>
+								</div>
 								LinkedIn
 							</a>
 						</div>
-						<div class="col pb-3">
-							<a href="https://github.com/jrmistry" target="_blank">
-								<i class="pl-1 fab fa-github-square fa-3x"></i>
-								</br>
+						<div class="col mb-4">
+							<a class='btn btn-primary text-center' href="https://github.com/jrmistry" target="_blank">
+								<div>
+									<i class="fab fa-github-square fa-3x"></i>
+								</div>
 								GitHub
 							</a>
 						</div>
-						<div class="col pb-3">
-							<a href="https://www.kaggle.com/jrmistry" target="_blank">
-								<i class="pl-1 fab fa-kaggle fa-3x"></i>
-								</br>
+						<div class="col mb-4">
+							<a class='btn btn-primary text-center' href="https://www.kaggle.com/jrmistry" target="_blank">
+								<div>
+									<i class="fab fa-kaggle fa-3x"></i>
+								</div>
 								Kaggle
 							</a>
 						</div>
-						<div class="col pb-3">
-							<a href="https://www.google.com/maps/contrib/105296976064275189262/" target="_blank">
-								<i class="pl-1 fab fa-google fa-3x"></i>
-								</br>
+						<div class="col mb-4">
+							<a class='btn btn-primary text-center' href="https://www.google.com/maps/contrib/105296976064275189262/" target="_blank">
+								<div>
+									<i class="fab fa-google fa-3x"></i>
+								</div>
 								Google Maps
 							</a>
 						</div>
-						<div class="col pb-3">
-							<a href="https://www.instagram.com/fakejd/" target="_blank">
-								<i class="pl-1 fab fa-instagram fa-3x"></i>
-								</br>
+						<div class="col mb-4">
+							<a class='btn btn-primary text-center' href="https://www.instagram.com/fakejd/" target="_blank">
+								<div>
+									<i class="fab fa-instagram fa-3x"></i>
+								</div>
 								Instagram
 							</a>
 						</div>
-						<div class="col pb-3">
-							<a href="https://uwaterloo.ca/geospatial-participation/people-profiles/jaydeep-mistry/" target="_blank">
-								<i class="pl-1 fas fa-graduation-cap fa-3x"></i>
-								</br>
+						<div class="col mb-4">
+							<a class='btn btn-primary text-center' href="https://uwaterloo.ca/geospatial-participation/people-profiles/jaydeep-mistry/" target="_blank">
+								<div>
+									<i class="fas fa-graduation-cap fa-3x"></i>
+								</div>
 								UWaterloo
 							</a>
-						</div>
-					</div>
+						</div>						
+					</div>					
 				</div>
 			</div>
 		</div>
@@ -702,17 +737,21 @@
 
 	<script>
 		function validateEmailRequest() {
-			var answer = document.getElementById("emailRequest");
+			var emailRequest = document.getElementById("emailRequest");
+			var emailAnswer = document.getElementById("emailAnswer");
+
 			var component = "jrmistry"
 			var product = "@"
 			var company = "edu."
 			var group = "uwaterloo"
 			var placer = ".ca"
-			if (answer.value == "Water" || answer.value == "water") {
-				document.getElementById("emailAnswer").href = "mailto:" + component + product + company + group + placer;
-				document.getElementById("emailAnswer").innerHTML = component + product + company + group + placer;			
+
+			if (emailRequest.value == "Water" || emailRequest.value == "water") {				
+				emailAnswer.href = "mailto:" + component + product + company + group + placer;
+				emailAnswer.innerHTML = component + product + company + group + placer;
 			} else {
-				document.getElementById("emailAnswer").innerHTML = '';
+				emailAnswer.innerHTML = '';
+				emailRequest.value = '';
 			}
 			
 		};
