fixing email modal closing prompt

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 											<h5 class="modal-title" id="exampleModalLabel">
 												Email Request
 											</h5>
-											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<button type="button" class="close" aria-label="Close">
 												<span aria-hidden="true">&times;</span>
 											</button>
 										</div>
@@ -639,7 +639,7 @@
 													<div class="invalid-feedback">
 														Incorrect answer.
 													</div>
-													<button type="submit" onclick="validateEmailRequest()" class="btn btn-primary mt-3">Submit</button>
+													<button type="button" onclick="validateEmailRequest()" class="btn btn-primary mt-3">Submit</button>
 												</div>
 											</form>
 											<a id="emailAnswer" class="lead" href="mailto:#"></a>
