--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 			<div id="navbarSupportedContent" class="collapse navbar-collapse">
 				<ul class="navbar-nav ml-auto nav-pills pt-1">
 					<li class="nav-item">
+						<a class="nav-link pl-2 pr-2" href="#about">About</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link pl-2 pr-2" href="#skills">Skills</a>
 					</li>
 					<li class="nav-item">
