stable update to profile pic image and layout

--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
 			padding-top: 70px;
 		}
 
+		.pt-10 {
+			padding-top: 100px;
+		}
+
 		.pb-7 {
 			padding-bottom: 70px;
+		}
+
+		.profile-picture {
+			max-width: 300px;
 		}
 	
 		.progress-skills {
@@ -92,25 +100,26 @@
 		</div>
 	</nav>
 
-	<div id="about" class="jumbotron jumbotron-fluid pt-7 mb-0">
+	<div id="about" class="jumbotron jumbotron-fluid pt-10 mb-0">
 		<div class="container">
-			<h1 class="display-4">About</h1>
 			<div class="row">
 				<div class="col-lg">
-					<img class="img-thumbnail" alt="Jaydeep Mistry Profile Picture" src="https://i.ibb.co/HqrqqYc/Mistry-Jaydeep-San-Diego.jpg">
-					<p class="container text-right">
-						<i class="fas fa-map-marker-alt"></i>
-						La Hoya, San Diego, U.S.A.
-					</p>
+					<img class="img-thumbnail rounded-circle profile-picture mx-auto d-block" alt="Jaydeep Mistry Profile Picture" src="https://i.ibb.co/yWwHLTY/Mistry-Jaydeep-Square.jpg">
 				</div>
 				<div class="col-sm lead text-center">
-					<p class="lead mb-0">
-						Jaydeep Mistry is a persistent programmer, a dedicated friend, and a relentless problem solver. He has
-						competed
-						in
-						various app challenges, presented his work at recognized conferences, and earned the respect of his peers
-						through creative solutions.
-					</p>
+					<table class="h-100 w-100">
+						<tbody>
+							<tr>
+								<td class="lead align-middle">
+									<p>
+										Jaydeep Mistry is a persistent programmer, a dedicated friend, and a relentless problem solver. He has competed in various app challenges, presented his work at recognized conferences, and earned the respect of his peers through creative solutions.
+									</p>
+									<a class="btn btn-success" href="#experiences" role="button">Find Out More</a>
+									<a class="btn btn-info" href="#contact" role="button">Get in Touch</a>
+								</td>
+							</tr>
+						</tbody>
+					</table>					
 				</div>
 			</div>
 		</div>
