profile pic update green background black bottom bar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 		.profile-picture {
 			max-width: 300px;
 		}
+
+		.background-green {
+			background: rgba(76, 175, 80, 0.2);
+		}
 	
 		.progress-skills {
 			height: 30px;
@@ -76,7 +80,7 @@
 			 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<a class="navbar-brand ml-2" href="#about">Jaydeep Mistry</a>
+			<a class="navbar-brand" href="#about">Jaydeep Mistry</a>
 
 			<div id="navbarSupportedContent" class="collapse navbar-collapse">
 				<ul class="navbar-nav ml-auto nav-pills pt-1">
@@ -100,7 +104,7 @@
 		</div>
 	</nav>
 
-	<div id="about" class="jumbotron jumbotron-fluid pt-10 mb-0">
+	<div id="about" class="jumbotron jumbotron-fluid pt-10 mb-0 background-green">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg">
@@ -481,7 +485,7 @@
 						</div>
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item text-right">
-								<a class="btn btn-primary" href="https://www.google.com/maps/contrib/105296976064275189262/" role="button"
+								<a class="btn btn-info" href="https://www.google.com/maps/contrib/105296976064275189262/" role="button"
 								 target="_blank">
 									Available here
 								</a>
@@ -504,7 +508,7 @@
 						</div>
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item text-right">
-								<a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.grttxt.jrmistry.grtext2" role="button"
+								<a class="btn btn-info" href="https://play.google.com/store/apps/details?id=com.grttxt.jrmistry.grtext2" role="button"
 								 target="_blank">
 									Available on Google Play
 								</a>
@@ -547,7 +551,7 @@
 						</div>
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item text-right">
-								<a class="btn btn-primary" href="https://esricanada-ce.github.io/appchallenge/2018/teams/uw/Water3D/" role="button"
+								<a class="btn btn-info" href="https://esricanada-ce.github.io/appchallenge/2018/teams/uw/Water3D/" role="button"
 								 target="_blank">
 									Available here
 								</a>
@@ -574,7 +578,7 @@
 						</div>
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item text-right">
-								<a class="btn btn-primary" href="https://esricanada-ce.github.io/appchallenge/2017/teams/uw/Team_Earth_Link/"
+								<a class="btn btn-info" href="https://esricanada-ce.github.io/appchallenge/2017/teams/uw/Team_Earth_Link/"
 								 role="button" target="_blank">
 									Available here
 								</a>
@@ -607,7 +611,7 @@
 		</div>
 	</div>
 	
-	<div id="contact" class="jumbotron jumbotron-fluid pt-7 mb-0">
+	<div id="contact" class="jumbotron jumbotron-fluid pt-7 mb-0 background-green">
 		<div class="container">
 			<h1 class="display-4">Contact</h1>
 			<p class="lead">
@@ -616,7 +620,7 @@
 			<div class="row text-center">
 				<div class="col mb-4">
 					<!-- Button trigger modal -->
-					<button type="button" class="btn btn-primary text-center" data-toggle="modal" data-target="#exampleModal">
+					<button type="button" class="btn btn-info text-center" data-toggle="modal" data-target="#exampleModal">
 						<div>
 							<i class="fas fa-envelope fa-3x"></i>
 						</div>
@@ -681,7 +685,7 @@
 					</div>
 				</div>
 				<div class="col mb-4">
-					<a class='btn btn-primary text-center' href="https://twitter.com/Jaydeep__Mistry" target="_blank">
+					<a class='btn btn-info text-center' href="https://twitter.com/Jaydeep__Mistry" target="_blank">
 						<div>
 							<i class="fab fa-twitter-square fa-3x"></i>
 						</div>
@@ -689,7 +693,7 @@
 					</a>
 				</div>
 				<div class="col mb-4">
-					<a class='btn btn-primary text-center' href="https://www.linkedin.com/in/jaydeep-mistry/" target="_blank">
+					<a class='btn btn-info text-center' href="https://www.linkedin.com/in/jaydeep-mistry/" target="_blank">
 						<div>
 							<i class="fab fa-linkedin fa-3x"></i>
 						</div>
@@ -697,7 +701,7 @@
 					</a>
 				</div>
 				<div class="col mb-4">
-					<a class='btn btn-primary text-center' href="https://github.com/jrmistry" target="_blank">
+					<a class='btn btn-info text-center' href="https://github.com/jrmistry" target="_blank">
 						<div>
 							<i class="fab fa-github-square fa-3x"></i>
 						</div>
@@ -705,7 +709,7 @@
 					</a>
 				</div>
 				<div class="col mb-4">
-					<a class='btn btn-primary text-center' href="https://www.kaggle.com/jrmistry" target="_blank">
+					<a class='btn btn-info text-center' href="https://www.kaggle.com/jrmistry" target="_blank">
 						<div>
 							<i class="fab fa-kaggle fa-3x"></i>
 						</div>
@@ -713,7 +717,7 @@
 					</a>
 				</div>
 				<div class="col mb-4">
-					<a class='btn btn-primary text-center' href="https://www.google.com/maps/contrib/105296976064275189262/" target="_blank">
+					<a class='btn btn-info text-center' href="https://www.google.com/maps/contrib/105296976064275189262/" target="_blank">
 						<div>
 							<i class="fab fa-google fa-3x"></i>
 						</div>
@@ -721,7 +725,7 @@
 					</a>
 				</div>
 				<div class="col mb-4">
-					<a class='btn btn-primary text-center' href="https://www.instagram.com/fakejd/" target="_blank">
+					<a class='btn btn-info text-center' href="https://www.instagram.com/fakejd/" target="_blank">
 						<div>
 							<i class="fab fa-instagram fa-3x"></i>
 						</div>
@@ -729,7 +733,7 @@
 					</a>
 				</div>
 				<div class="col mb-4">
-					<a class='btn btn-primary text-center' href="https://uwaterloo.ca/geospatial-participation/people-profiles/jaydeep-mistry/"
+					<a class='btn btn-info text-center' href="https://uwaterloo.ca/geospatial-participation/people-profiles/jaydeep-mistry/"
 					 target="_blank">
 						<div>
 							<i class="fas fa-graduation-cap fa-3x"></i>
@@ -739,6 +743,20 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div class="container-fluid bg-dark text-light text-center">
+		<ul class="list-inline pb-1 mb-0">
+			<li class="list-inline-item">
+				Website Made by © <a href="#about" class="badge badge-light">Jaydeep Mistry</a>
+			</li>
+			<li class="list-inline-item">
+				Styled Using <a href="https://getbootstrap.com/" class="badge badge-light" target="_blank">Bootstrap</a>
+			</li>
+			<li class="list-inline-item">
+				Hosted on <a href="https://github.com/jrmistry/jrmistry.github.io/" class="badge badge-light" target="_blank">GitHub</a>
+			</li>
+		</ul>
 	</div>
 
 	<!-- Leaflet JS -->
