increasing navbar profile name size

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 			padding-bottom: 70px;
 		}
 
+		.profile-name {
+			font-size: 1.75rem !important;
+			font-weight: lighter;
+		}
+
 		.profile-picture {
 			max-width: 300px;
 		}
@@ -80,7 +85,7 @@
 			 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<a class="navbar-brand" href="#about">Jaydeep Mistry</a>
+			<a class="navbar-brand profile-name" href="#about">Jaydeep Mistry</a>
 
 			<div id="navbarSupportedContent" class="collapse navbar-collapse">
 				<ul class="navbar-nav ml-auto nav-pills pt-1">
