--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             </p>
                         </div>
                         <div class="col col-md-4">
-                            <img src="https://i.ibb.co/yWwHLTY/Mistry-Jaydeep-Square.jpg" alt="..."
+                            <img src="assets/Mistry_Jaydeep_Square.jpg" alt="Picture of Jaydeep's Face"
                                 class="img-thumbnail">
                         </div>
                     </div>
