adding standalone cell for experiences

--- a/index.html
+++ b/index.html
@@ -243,10 +243,35 @@
             </div>
         </div>
 
-        <div id="cell-contact" class="pt-cell bg-white">
+        <div id="cell-experiences" class="pt-cell bg-white">
             <div class="media">
                 <div class='ml-2 mr-2 text-primary'>
                     In [4]:
+                </div>
+                <div class="media-body">
+                    <div class="card bg-light">
+                        <div class="card-body">
+                            <div>
+                                Jaydeep_Mistry.experiences()
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="media mt-3">
+                <div class='mr-2 text-danger'>
+                    Out [4]:
+                </div>
+                <div class="media-body">
+                    
+                </div>
+            </div>
+        </div>
+
+        <div id="cell-contact" class="pt-cell bg-white">
+            <div class="media">
+                <div class='ml-2 mr-2 text-primary'>
+                    In [5]:
                 </div>
                 <div class="media-body">
                     <div class="card bg-light">
@@ -260,7 +285,7 @@
             </div>
             <div class="media mt-3">
                 <div class='mr-2 text-danger'>
-                    Out [4]:
+                    Out [5]:
                 </div>
                 <div class="media-body">
                     <div class="table-responsive-xl">
@@ -338,7 +363,7 @@
         <div id="cell-disclaimer" class="pt-cell pb-cell bg-white">
             <div class="media">
                 <div class='ml-2 mr-2 text-primary'>
-                    In [5]:
+                    In [6]:
                 </div>
                 <div class="media-body">
                     <div class="card bg-light">
@@ -352,7 +377,7 @@
             </div>
             <div class="media mt-3">
                 <div class='mr-2 text-danger'>
-                    Out [5]:
+                    Out [6]:
                 </div>
                 <div class="media-body">
                     <div class="card text-white bg-dark">
